white spaces fixed for mobile device

--- a/src/App.css
+++ b/src/App.css
@@ -22,4 +22,5 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  margin: 0 12px;
 }
